Module One/main.tf
//This initalizes providers and version 
//anything between 5.0 and 5.9 is used but it won't go to 6.0
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 5.0"
    }
  }
}

//this tells aws were to deploy which is us-east-1
provider "aws" {
    region = "us-east-1"
}

//this is an VPC resource that basically is an empty container
//CIDR block is 10.0.0.0/16
//Name tag give the VPC a name called Terraform VPC
//otherwise you would have vpc-6g3h etc....
resource "aws_vpc" "demo_vpc" {
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = "Terraform VPC"
    }
}

// creates subnets, attaches to VPC ID from aws_vpc 
//and gives CIDR blocks to both
//worth noting both subnets are private - names mean nothing here

resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.demo_vpc.id
    cidr_block = "10.0.0.0/24"
}

resource "aws_subnet" "private_subnet" {
    vpc_id = aws_vpc.demo_vpc.id
    cidr_block = "10.0.1.0/24"
}

//builds internet gateway and attaches to VPC ID from aws_vpc
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.demo_vpc.id
}

//builds the public route table and associates with aws_vpc
//Also attaches to the internet gateway and is saying 
//anyone can come in or leave since 0.0.0.0/0 encompasses all ip addresses
resource "aws_route_table" "public_rtb" {
    vpc_id = aws_vpc.demo_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
}

//this attaches that route table to our public subnet
//now this means our public subnet can reach the internet
resource "aws_route_table_association" "public_subnet" {
    subnet_id = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.public_rtb.id
  
}
